--- a/EJS/views/instagram.ejs
+++ b/EJS/views/instagram.ejs
@@ -4,9 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>instagram</title>
+    <style>
+      img {
+        height: 100px;
+        width: 100px;
+      }
+    </style>
   </head>
   <body>
-    <h2>this account belons to @ <%= username %></h2>
-    <button>follow</button>
+    <h2>This account belongs to @ <%= data.name %></h2>
+    <button>Follow</button>
+    <p>The followers are <%= data.followers %></p>
+    <p>The followings are <%= data.followings %></p>
+    <hr />
+    <% for (let post of data.posts) { %>
+    <img src="<%= post.image %>" alt="Post Image" />
+    <p>The likes are <%= post.likes %></p>
+    <p>The comments are <%= post.comments %></p>
+    <% } %>
   </body>
 </html>
