--- a/RESTFUL-APIS-PRACTICE/views/new.ejs
+++ b/RESTFUL-APIS-PRACTICE/views/new.ejs
@@ -9,11 +9,15 @@
     <form action="/post" method="POST">
       <input type="text" placeholder="enter your name" name="username" /> <br />
       <br />
+      <br />
+      text area th frkftggfrkrrgr
 
       <textarea name="enter your content " id="" name="content"></textarea>
 
       <br />
       <button>Submit new post</button>
     </form>
+
+    <!--  -->
   </body>
 </html>
